# metricsHTTPProvider

./: .gitignore  CMakeLists.txt
qt/mp/: main.cpp  mp.pro
src/: CMakeLists.txt  MetricsHTTPProvider.cpp  MetricsHTTPProvider.hpp  config_service.cpp  daemon_run1.cpp  dynamic_config_fallback.json  static_config.yaml
